--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </div>
                             <!-- /.card-headding -->
                             <div class="card-info">
-                                <div class="rating"> <img src="/img/rating.svg" alt="rating" class="rating-star" />
+                                <div class="rating"> <img src="img/rating.svg" alt="rating" class="rating-star" />
                                     4.5</div>
                                 <div class="price">От 900 ₽</div>
                                 <div class="category">Пицца</div>
@@ -71,7 +71,7 @@
                             </div>
                             <!-- /.card-headding -->
                             <div class="card-info">
-                                <div class="rating"> <img src="/img/rating.svg" alt="rating" class="rating-star" />
+                                <div class="rating"> <img src="img/rating.svg" alt="rating" class="rating-star" />
                                     4.7</div>
                                 <div class="price">От 900 ₽</div>
                                 <div class="category">Пицца</div>
@@ -92,7 +92,7 @@
                             </div>
                             <!-- /.card-headding -->
                             <div class="card-info">
-                                <div class="rating"> <img src="/img/rating.svg" alt="rating" class="rating-star" />
+                                <div class="rating"> <img src="img/rating.svg" alt="rating" class="rating-star" />
                                     4.9</div>
                                 <div class="price">От 900 ₽</div>
                                 <div class="category">Пицца</div>
@@ -112,7 +112,7 @@
                             </div>
                             <!-- /.card-headding -->
                             <div class="card-info">
-                                <div class="rating"> <img src="/img/rating.svg" alt="rating" class="rating-star" />
+                                <div class="rating"> <img src="img/rating.svg" alt="rating" class="rating-star" />
                                     4.5</div>
                                 <div class="price">От 900 ₽</div>
                                 <div class="category">Суши, блюда китайской еды</div>
@@ -132,7 +132,7 @@
                             </div>
                             <!-- /.card-headding -->
                             <div class="card-info">
-                                <div class="rating"> <img src="/img/rating.svg" alt="rating" class="rating-star" />
+                                <div class="rating"> <img src="img/rating.svg" alt="rating" class="rating-star" />
                                     4.7</div>
                                 <div class="price">От 750 ₽</div>
                                 <div class="category">Пицца и роллы</div>
@@ -152,7 +152,7 @@
                             </div>
                             <!-- /.card-headding -->
                             <div class="card-info">
-                                <div class="rating"> <img src="/img/rating.svg" alt="rating" class="rating-star" />
+                                <div class="rating"> <img src="img/rating.svg" alt="rating" class="rating-star" />
                                     4.8</div>
                                 <div class="price">От 900 ₽</div>
                                 <div class="category">Пицца и бургеры</div>
