--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="img/user.svg" alt="user" class="button-icon" />
                     <span class="button-text">Войти</span>
                 </button>
-                <button class="button">
+                <button class="button" id="card-button">
                     <img src="img/shopping-cart.svg" alt="shopping-cart" class="button-icon" />
                     <span class="button-text">Карзина</span>
                 </button>
